# Electronics-Store-Management-System

./: CMakeLists.txt  GuiController.cpp  GuiController.h  Orders.csv  README.md  Store.cpp  Store.h  Warehouse.csv  main.cpp  users.csv
gui/: appwindow.slint
